--- a/app/src/main/res/layout/store_list_row.xml
+++ b/app/src/main/res/layout/store_list_row.xml
@@ -1,54 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    card_view:cardCornerRadius="0dp"
+    card_view:cardElevation="5dp">
 
-    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="0dp"
-        card_view:cardElevation="5dp">
+        android:orientation="vertical"
+        android:padding="5dp">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/txtStoreName"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:paddingBottom="5dp"
+            android:textColor="#212121"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/txtStoreName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                android:textColor="#212121"
-                android:textStyle="bold"
-                />
+        <TextView
+            android:id="@+id/txtStoreAddr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="5dp"
+            android:textColor="#212121"
+            android:textStyle="italic" />
 
-            <TextView
-                android:id="@+id/txtStoreAddr"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                android:textColor="#212121"
-                android:textStyle="italic"/>
+        <TextView
+            android:id="@+id/txtStoreOpenNow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="5dp" />
 
-            <TextView
-                android:id="@+id/txtStoreOpenNow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                />
+        <TextView
+            android:id="@+id/txtStoreRating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="5dp" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/txtStoreRating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="5dp" />
-        </LinearLayout>
+</androidx.cardview.widget.CardView>
 
-    </androidx.cardview.widget.CardView>
-
-</LinearLayout>
